--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,21 @@
+<!-- 
+All About Fly - 2023 HOME
+Developed By-
+TANVI : https://www.linkedin.com/in/tanvinaik30
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta http-equiv="x-ua-compatible" content="ie=edge" />
+	<meta name="author" content="allaboutfly" />
+	<meta name="keywords"
+    content="Drone , drones, dji , drone equipments" />
+	<meta name="HandheldFriendly" content="true" />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -13,8 +25,6 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
-
     <link rel="stylesheet" href="css/linearicons.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/themify-icons.css">
